--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@prisma/client": "^6.11.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "google-auth-library": "^10.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
