--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.899.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -59,7 +60,7 @@
     "@types/handlebars": "^4.0.40",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/nodemailer": "^7.0.1",
+    "@types/nodemailer": "^7.0.2",
     "@types/passport-jwt": "^4.0.1",
     "@types/pdfkit": "^0.17.3",
     "@types/supertest": "^6.0.0",
