--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prisma:migrate": "prisma migrate deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.958.0",
     "@aws-sdk/client-ses": "^3.899.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
