--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "peluqueria-backend",
   "version": "0.0.1",
   "description": "",
+   "engines": {
+    "node": "20.x"
+  },
   "author": "",
   "private": true,
   "license": "UNLICENSED",
