--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "peluqueria-backend",
   "version": "0.0.1",
   "description": "",
-   "engines": {
+  "engines": {
     "node": "20.x"
   },
   "author": "",
@@ -42,6 +42,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "google-auth-library": "^10.1.0",
     "handlebars": "^4.7.8",
     "nodemailer": "^7.0.6",
